[gd_scene load_steps=9 format=3 uid="uid://bd5q5pdm7ao4s"]

[ext_resource type="Texture2D" uid="uid://1caww6q471wg" path="res://menus/themes/ui-pack-adventure.png" id="1_724m4"]
[ext_resource type="Script" uid="uid://dbnplq1u16qn0" path="res://game/strike_progress_bar.gd" id="2_628g7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p3c0u"]
atlas = ExtResource("1_724m4")
region = Rect2(352, 1120, 32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_628g7"]
load_path = "res://.godot/imported/ui-pack-adventure.png-f9db1d1066aeffaf0b2b1b272b318e81.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_2untf"]
atlas = SubResource("CompressedTexture2D_628g7")
region = Rect2(448, 1120, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_628g7"]
atlas = ExtResource("1_724m4")
region = Rect2(352, 1200, 64, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3c0u"]
texture = SubResource("AtlasTexture_628g7")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sc4u4"]
atlas = ExtResource("1_724m4")
region = Rect2(416, 1200, 64, 32)

[node name="StrikeProgressBar" type="Range"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
physics_interpolation_mode = 2
auto_translate_mode = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 3
anchors_preset = 10
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 1
rotation = 0.0
scale = Vector2(1, 1)
pivot_offset = Vector2(0, 0)
size_flags_horizontal = 2
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
localize_numeral_system = true
tooltip_text = ""
tooltip_auto_translate_mode = 0
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
min_value = 0.0
max_value = 1.0
step = 0.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
script = ExtResource("2_628g7")
empty_texture = SubResource("AtlasTexture_p3c0u")
strike_texture = SubResource("AtlasTexture_2untf")
metadata/_custom_type_script = "uid://dbnplq1u16qn0"

[node name="BouncerBar" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_p3c0u")

[node name="Bouncer" type="TextureRect" parent="BouncerBar"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -12.0
offset_right = 68.0
offset_bottom = 20.0
grow_vertical = 2
scale = Vector2(0.75, 0.75)
texture = SubResource("AtlasTexture_sc4u4")

[node name="StrikeBar" type="HBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StrikeTemplate" type="TextureRect" parent="StrikeBar"]
layout_mode = 2
